added Iron Detector Item

--- a/src/main/resources/assets/conanstuff/lang/en_us.json
+++ b/src/main/resources/assets/conanstuff/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.conanstuff.ruby": "Ruby",
   "block.conanstuff.ruby_block": "Ruby Block",
   "block.conanstuff.xp_ore": "XP Ore",
-  "block.conanstuff.ruby_ore": "Ruby Ore"
+  "block.conanstuff.ruby_ore": "Ruby Ore",
+  "item.conanstuff.iron_detector": "Iron Detector"
 }
