added sound block

--- a/src/main/resources/assets/conanstuff/lang/en_us.json
+++ b/src/main/resources/assets/conanstuff/lang/en_us.json
@@ -3,5 +3,6 @@
   "block.conanstuff.ruby_block": "Ruby Block",
   "block.conanstuff.xp_ore": "XP Ore",
   "block.conanstuff.ruby_ore": "Ruby Ore",
-  "item.conanstuff.iron_detector": "Iron Detector"
+  "item.conanstuff.iron_detector": "Iron Detector",
+  "block.conanstuff.sound_block": "Sound Block"
 }
